--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>QuickReply</title>
 		<link rel="shortcut icon" type="image/png" href="/favicon.png">
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<script src="CopyFunction.js"></script>
 	</head>
 	
 	<body style= "margin:0">
