--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p>Click on the button to copy the text from the text field.</p>
 		
 		<div class="container">
-		<textarea class="CopyText" id="Text1" readonly>Please don't post on old, resolved topics. That is called necroposting and isn't allowed. </textarea>
+		<textarea class="CopyText" id="Text1" readonly>Hi there! Please don't post on old topics as doing so is called necroposting, which is not allowed. Thanks!</textarea>
 		<button onclick="myFunction(1)">Copy Text</button>
 		<br>
 		<br>
