--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 		
 		<div class="container">
-		<textarea class="CopyText" id="Text3" readonly></textarea>
+		<textarea class="CopyText" id="Text3" readonly>should be closed</textarea>
 		<button onclick="myFunction(3)">Copy Text</button>
 		<br>
 		<br>
