--- a/index.html
+++ b/index.html
@@ -8,24 +8,59 @@
 	
 	<body style= "margin:0">
 		<p>Click on the button to copy the text from the text field.</p>
-		
+		<h2>General</h2>
+		<br>
 		<div class="container">
 		<textarea class="CopyText" id="Text1" readonly>Hi there! Please don't post on old topics as doing so is called necroposting, which is not allowed. Thanks!</textarea>
 		<button onclick="myFunction(1)">Copy Text</button>
 		<br>
 		<br>
 		</div>
-
+		
 		<div class="container">
-		<textarea class="CopyText" id="Text2" readonly>This suggestion is rejected, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before posting.</textarea>
+		<textarea class="CopyText" id="Text2" readonly>should be closed</textarea>
 		<button onclick="myFunction(2)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+				
+		<div class="container">
+		<textarea class="CopyText" id="Text3" readonly>Hi there! Please don't advertise here, as this is not the correct place for advertising. However, feel free to advertise in the [url=https://scratch.mit.edu/discuss/8/]Show And Tell[/url] Forum!</textarea>
+		<button onclick="myFunction(3)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+		
+		<h2>Suggestions</h2>
+		<br>
+		<div class="container">
+		<textarea class="CopyText" id="Text4" readonly>This suggestion is rejected, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before posting.</textarea>
+		<button onclick="myFunction(4)">Copy Text</button>
 		<br>
 		<br>
 		</div>
 		
 		<div class="container">
-		<textarea class="CopyText" id="Text3" readonly>should be closed</textarea>
-		<button onclick="myFunction(3)">Copy Text</button>
+		<textarea class="CopyText" id="Text5" readonly>Please post each suggestion in a seperate topic, so that each suggestion can get the attention that it deserves.</textarea>
+		<button onclick="myFunction(5)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+		
+		<h2>Questions About Scratch</h2>
+		<br>
+		<div class="container">
+		<textarea class="CopyText" id="Text6" readonly>The Questions About Scratch forum is for users to ask questions and receive answers about Scratch. While it's nice that you want to help, posting random information isn't the best way to do it - it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
+		<button onclick="myFunction(6)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+				
+		<h2>Help With Scripts</h2>
+		<br>
+		<div class="container">
+		<textarea class="CopyText" id="Text6" readonly>The Help With Scripts forum is for users to ask questions and receive answers about their code. While it's nice that you want to help, posting random guides isn't the best way to do it - it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
+		<button onclick="myFunction(6)">Copy Text</button>
 		<br>
 		<br>
 		</div>
