--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
 	</head>
 	
 	<body style= "margin:0">
-		<p>Click on the button to copy the text from the text field.</p>
-		<h2>General</h2>
+		
+		<div class="TOC">
+		<h3 style="text-align: center;"><a href="#top" class="PageLink">Top</a></h3>
+		<h3 style="text-align: center;"><a href="#general" class="PageLink">General</a></h3>
+		<h3 style="text-align: center;"><a href="#suggestions" class="PageLink">Suggestions</a></h3>
+		<h3 style="text-align: center;"><a href="#qas" class="PageLink">QAS</a></h3>
+		<h3 style="text-align: center;"><a href="#hws" class="PageLink">HWS</a></h3>
+		<h3 style="text-align: center;"><a href="#bag" class="PageLink">BAG</a></h3>
+		</div>
+		
+		<p class="label">Click on the button to copy the text from the text field.</p>
+		<h2 class="label" id="general">General</h2>
 		<div class="container">
 		<textarea class="CopyText" id="Text1" readonly>Hi there! Please don't post on old topics as doing so is called necroposting, which is not allowed. Thanks!</textarea>
 		<button onclick="myFunction(1)">Copy Text</button>
@@ -32,7 +42,7 @@
 		
 		<br>
 		
-		<h2>Suggestions</h2>
+		<h2 class="label" id="suggestions">Suggestions</h2>
 		<div class="container">
 		<textarea class="CopyText" id="Text4" readonly>This suggestion is rejected, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before posting.</textarea>
 		<button onclick="myFunction(4)">Copy Text</button>
@@ -49,7 +59,7 @@
 		
 		<br>
 		
-		<h2>Questions About Scratch</h2>
+		<h2 class="label" id="qas">Questions About Scratch</h2>
 		<div class="container">
 		<textarea class="CopyText" id="Text6" readonly>The Questions About Scratch forum is for users to ask questions and receive answers about Scratch. While it's nice that you want to help, posting random information isn't the best way to do it - it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
 		<button onclick="myFunction(6)">Copy Text</button>
@@ -59,14 +69,23 @@
 			
 		<br>
 		
-		<h2>Help With Scripts</h2>
+		<h2 class="label" id="hws">Help With Scripts</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text6" readonly>The Help With Scripts forum is for users to ask questions and receive answers about their code. While it's nice that you want to help, posting random guides isn't the best way to do it - it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
-		<button onclick="myFunction(6)">Copy Text</button>
+		<textarea class="CopyText" id="Text7" readonly>The Help With Scripts forum is for users to ask questions and receive answers about their code. While it's nice that you want to help, posting random guides isn't the best way to do it - it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
+		<button onclick="myFunction(7)">Copy Text</button>
 		<br>
 		<br>
 		</div>
 		
+		<br>
+		
+		<h2 class="label" id="bag">Bugs And Glitches</h2>
+		<div class="container">
+		<textarea class="CopyText" id="Text8" readonly>What browser and OS are you using? You can find out this information by pressing the grey globe icon when you create a post.</textarea>
+		<button onclick="myFunction(8)">Copy Text</button>
+		<br>
+		<br>
+		</div>
 		<script>
 			function myFunction(area) {
   				var copyText = document.getElementById("Text"+area);
