--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>QuickReply</title>
 		<link rel="shortcut icon" type="image/png" href="/favicon.png">
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
