--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	
 	<body style= "margin:0">
+		<embed type="text/html" src="https://theforumhelpers.github.io/resources/header.html" style="width:100%; height:70px; margin-bottom:-5px">
 		
 		<div class="TOC">
 		<h3 style="text-align: center;"><a href="#top" class="PageLink">Top</a></h3>
