--- a/index.html
+++ b/index.html
@@ -27,17 +27,10 @@
 		<br>
 		<br>
 		</div>
-		
-		<div class="container">
-		<textarea class="CopyText" id="Text2" readonly>should be closed</textarea>
-		<button onclick="myFunction(2)">Copy Text</button>
-		<br>
-		<br>
-		</div>
 				
 		<div class="container">
-		<textarea class="CopyText" id="Text3" readonly>Hi there! Please don't advertise here, as this is not the correct place for advertising. However, feel free to advertise in the [url=https://scratch.mit.edu/discuss/8/]Show And Tell[/url] Forum!</textarea>
-		<button onclick="myFunction(3)">Copy Text</button>
+		<textarea class="CopyText" id="Text2" readonly>Please don't advertise here. The [FORUM NAME HERE] isn't the right place to advertise, and ads here can often cause clutter and get a bit spammy. Feel free to advertise in the [url=https://scratch.mit.edu/discuss/8/]Show And Tell[/url] Forum or in your forum signature!</textarea>
+		<button onclick="myFunction(2)">Copy Text</button>
 		<br>
 		<br>
 		</div>
@@ -46,15 +39,15 @@
 		
 		<h2 class="label" id="suggestions">Suggestions</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text4" readonly>This suggestion is rejected, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before posting.</textarea>
-		<button onclick="myFunction(4)">Copy Text</button>
+		<textarea class="CopyText" id="Text3" readonly>This suggestion is rejected, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before posting.</textarea>
+		<button onclick="myFunction(3)">Copy Text</button>
 		<br>
 		<br>
 		</div>
 		
 		<div class="container">
-		<textarea class="CopyText" id="Text5" readonly>Please post each suggestion in a seperate topic, so that each suggestion can get the attention that it deserves.</textarea>
-		<button onclick="myFunction(5)">Copy Text</button>
+		<textarea class="CopyText" id="Text4" readonly>You've posted a lot of suggestions in a single topic. Please post them in separate threads so that each suggestion can get the attention that it deserves.</textarea>
+		<button onclick="myFunction(4)">Copy Text</button>
 		<br>
 		<br>
 		</div>
@@ -63,8 +56,29 @@
 		
 		<h2 class="label" id="qas">Questions About Scratch</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text6" readonly>The Questions About Scratch forum is for users to ask questions and receive answers about Scratch. While it's nice that you want to help, posting random information isn't the best way to do it - it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
+		<textarea class="CopyText" id="Text5" readonly>The Questions About Scratch forum is for users to ask questions and receive answers about Scratch. While it's nice that you want to help, posting random information isn't the best way to do it; it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
+		<button onclick="myFunction(5)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+		
+		<div class="container">
+		<textarea class="CopyText" id="Text6" readonly>Looks like this question's been resolved. I'll ask a mod to close it so that we can highlight the answer and prevent future necroposting.</textarea>
 		<button onclick="myFunction(6)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+		
+		<div class="container">
+		<textarea class="CopyText" id="Text7" readonly>The bit of text at the end of my posts is called a forum signature, which you can use to briefly describe yourself or advertise your projects. To change it, scroll to the bottom of the forum homepage and click "change your signature", or follow this link: [code]scratch.mit.edu/discuss/settings/YOUR USERNAME HERE[/code](replace YOUR USERNAME HERE with your username)</textarea>
+		<button onclick="myFunction(7)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+		
+		<div class="container">
+		<textarea class="CopyText" id="Text8" readonly>Unfortunately, you can't change your username. The Scratch Team actually has changed a few usernames before, but only in very rare cases and only for special reasons, like if the username revealed personal information or was inappropriate; they won't change a username without a very good reason, and "I don't like my username" doesn't count as a very good reason in their eyes. In the past, they have considered making private username changes possible, but they decided against it, citing moderation concerns and the potential confusion a username change could cause in the community. For more information, read section 8.1 in the [url=https://scratch.mit.edu/discuss/topic/343602/]List of Rejected Suggestions[/url].<br><br>However, that doesn't mean you're out of options. You can choose to create a new account, transfer your current projects over by downloading/reuploading them, and make it clear that you're moving; keep in mind though that your statistics, like your follower count or the loves you've gotten on your projects, cannot be transferred over. Alternatively, if you don't want to lose those statistics, you can choose to stay with your current account and live with your username. Check out [url=https://scratch.mit.edu/discuss/topic/312761/]this helpful guide[/url] for more information.</textarea>
+		<button onclick="myFunction(8)">Copy Text</button>
 		<br>
 		<br>
 		</div>
