--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		
 		<h2 class="label" id="suggestions">Suggestions</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text3" readonly>This suggestion is rejected, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before posting.</textarea>
+		<textarea class="CopyText" id="Text3" readonly>This suggestion has been considered before and rejected, because [BRIEF EXPLANATION]. Next time, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before you post here. [ADD A QUOTE FROM THE LIST EXPLAINING WHY THE SUGGESTION HAS BEEN REJECTED HERE]</textarea>
 		<button onclick="myFunction(3)">Copy Text</button>
 		<br>
 		<br>
