Added a new message for the Suggestions forum

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
 		<br>
 		</div>
 		
+
+		<div class="container">
+		<textarea class="CopyText" id="Text4" readonly>Hi there! Try to keep suggestions on topic to the original post. Please make another topic for your suggestion.</textarea>
+		<button onclick="myFunction(4)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+		
 		<br>
 		
 		<h2 class="label" id="qas">Questions About Scratch</h2>
