Added a new message for the Suggestions forum (#6)
* Added a new message for the Suggestions forum

--- a/index.html
+++ b/index.html
@@ -52,33 +52,41 @@
 		<br>
 		</div>
 		
-		<br>
-		
-		<h2 class="label" id="qas">Questions About Scratch</h2>
+
 		<div class="container">
-		<textarea class="CopyText" id="Text5" readonly>The Questions About Scratch forum is for users to ask questions and receive answers about Scratch. While it's nice that you want to help, posting random information isn't the best way to do it; it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
+		<textarea class="CopyText" id="Text5" readonly>Hi there! Try to keep suggestions on topic to the original post. Please make another topic for your suggestion.</textarea>
 		<button onclick="myFunction(5)">Copy Text</button>
 		<br>
 		<br>
 		</div>
 		
+		<br>
+		
+		<h2 class="label" id="qas">Questions About Scratch</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text6" readonly>Looks like this question's been resolved. I'll ask a mod to close it so that we can highlight the answer and prevent future necroposting.</textarea>
+		<textarea class="CopyText" id="Text6" readonly>The Questions About Scratch forum is for users to ask questions and receive answers about Scratch. While it's nice that you want to help, posting random information isn't the best way to do it; it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
 		<button onclick="myFunction(6)">Copy Text</button>
 		<br>
 		<br>
 		</div>
 		
 		<div class="container">
-		<textarea class="CopyText" id="Text7" readonly>The bit of text at the end of my posts is called a forum signature, which you can use to briefly describe yourself or advertise your projects. To change it, scroll to the bottom of the forum homepage and click "change your signature", or follow this link: [code]scratch.mit.edu/discuss/settings/YOUR USERNAME HERE[/code](replace YOUR USERNAME HERE with your username)</textarea>
+		<textarea class="CopyText" id="Text7" readonly>Looks like this question's been resolved. I'll ask a mod to close it so that we can highlight the answer and prevent future necroposting.</textarea>
 		<button onclick="myFunction(7)">Copy Text</button>
 		<br>
 		<br>
 		</div>
 		
 		<div class="container">
-		<textarea class="CopyText" id="Text8" readonly>Unfortunately, you can't change your username. The Scratch Team actually has changed a few usernames before, but only in very rare cases and only for special reasons, like if the username revealed personal information or was inappropriate; they won't change a username without a very good reason, and "I don't like my username" doesn't count as a very good reason in their eyes. In the past, they have considered making private username changes possible, but they decided against it, citing moderation concerns and the potential confusion a username change could cause in the community. For more information, read section 8.1 in the [url=https://scratch.mit.edu/discuss/topic/343602/]List of Rejected Suggestions[/url].<br><br>However, that doesn't mean you're out of options. You can choose to create a new account, transfer your current projects over by downloading/reuploading them, and make it clear that you're moving; keep in mind though that your statistics, like your follower count or the loves you've gotten on your projects, cannot be transferred over. Alternatively, if you don't want to lose those statistics, you can choose to stay with your current account and live with your username. Check out [url=https://scratch.mit.edu/discuss/topic/312761/]this helpful guide[/url] for more information.</textarea>
+		<textarea class="CopyText" id="Text8" readonly>The bit of text at the end of my posts is called a forum signature, which you can use to briefly describe yourself or advertise your projects. To change it, scroll to the bottom of the forum homepage and click "change your signature", or follow this link: [code]scratch.mit.edu/discuss/settings/YOUR USERNAME HERE[/code](replace YOUR USERNAME HERE with your username)</textarea>
 		<button onclick="myFunction(8)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+		
+		<div class="container">
+		<textarea class="CopyText" id="Text9" readonly>Unfortunately, you can't change your username. The Scratch Team actually has changed a few usernames before, but only in very rare cases and only for special reasons, like if the username revealed personal information or was inappropriate; they won't change a username without a very good reason, and "I don't like my username" doesn't count as a very good reason in their eyes. In the past, they have considered making private username changes possible, but they decided against it, citing moderation concerns and the potential confusion a username change could cause in the community. For more information, read section 8.1 in the [url=https://scratch.mit.edu/discuss/topic/343602/]List of Rejected Suggestions[/url].<br><br>However, that doesn't mean you're out of options. You can choose to create a new account, transfer your current projects over by downloading/reuploading them, and make it clear that you're moving; keep in mind though that your statistics, like your follower count or the loves you've gotten on your projects, cannot be transferred over. Alternatively, if you don't want to lose those statistics, you can choose to stay with your current account and live with your username. Check out [url=https://scratch.mit.edu/discuss/topic/312761/]this helpful guide[/url] for more information.</textarea>
+		<button onclick="myFunction(9)">Copy Text</button>
 		<br>
 		<br>
 		</div>
@@ -87,8 +95,8 @@
 		
 		<h2 class="label" id="hws">Help With Scripts</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text9" readonly>The Help With Scripts forum is for users to ask questions and receive answers about their code. While it's nice that you want to help, posting random guides isn't the best way to do it - it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
-		<button onclick="myFunction(9)">Copy Text</button>
+		<textarea class="CopyText" id="Text10" readonly>The Help With Scripts forum is for users to ask questions and receive answers about their code. While it's nice that you want to help, posting random guides isn't the best way to do it - it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
+		<button onclick="myFunction(10)">Copy Text</button>
 		<br>
 		<br>
 		</div>
@@ -97,8 +105,8 @@
 		
 		<h2 class="label" id="bag">Bugs And Glitches</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text10" readonly>What browser and OS are you using? You can find out this information by pressing the grey globe icon when you create a post.</textarea>
-		<button onclick="myFunction(10)">Copy Text</button>
+		<textarea class="CopyText" id="Text11" readonly>What browser and OS are you using? You can find out this information by pressing the grey globe icon when you create a post.</textarea>
+		<button onclick="myFunction(11)">Copy Text</button>
 		<br>
 		<br>
 		</div>
