Fixed select issue
Fixed issue where "Things I'm Reading and Playing" didn't appear in selection menu.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<option>Questions about Scratch</option><option>Requests</option><option>Suggestions</option>
 		<option>New Scratchers</option><option>Help With Scripts</option><option>Show and Tell</option>
 		<option>Project Ideas</option><option>Bugs and Glitches</option><option>Advanced Topics</option>
-		<option>Things I'm Making and Creating</option>Things I'm Reading and Playing<option></option><option>Other Languages</option>
+		<option>Things I'm Making and Creating</option><option>Things I'm Reading and Playing</option><option>Other Languages</option>
 		<option>Open Source Projects</option><option>Developing Scratch Extensions</option><option>Connecting to the Physical World</option>
 		</select><br>
 		<textarea class="CopyText" id="Text12" readonly>I think topic this would fit better in the "Questions about Scratch" subforum. I'll ask to have it moved for you.</textarea>
