--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title>QuickReply</title>
 		<link rel="shortcut icon" type="image/png" href="/favicon.png">
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	</head>
 	
 	<body style= "margin:0">
