--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<link rel="shortcut icon" type="image/png" href="/favicon.png">
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	</head>
-	
+
 	<body style= "margin:0">
 		<embed type="text/html" src="https://theforumhelpers.github.io/resources/header.html" style="width:100%; height:70px; margin-bottom:-5px">
-		
+
 		<div class="TOC">
 		<h3 style="text-align: center;"><a href="#top" class="PageLink">Top</a></h3>
 		<h3 style="text-align: center;"><a href="#general" class="PageLink">General</a></h3>
@@ -18,44 +18,43 @@
 		<h3 style="text-align: center;"><a href="#hws" class="PageLink">HWS</a></h3>
 		<h3 style="text-align: center;"><a href="#bag" class="PageLink">BAG</a></h3>
 		</div>
-		
+
 		<p class="label">Click on the button to copy the text from the text field.</p>
 		<h2 class="label" id="general">General</h2>
-				
+
 		<div class="container">
 		<textarea class="CopyText" id="Text2" readonly>Please don't advertise here. This forum isn't the right place to advertise, and ads here can often cause clutter and get a bit spammy. Feel free to advertise in the [url=https://scratch.mit.edu/discuss/8/]Show And Tell[/url] Forum or in your forum signature, though!</textarea>
 		<button onclick="myFunction(2)">Copy Text</button>
 		<br>
 		<br>
 		</div>
-		
-		<br>
-		
-		<h2 class="label" id="suggestions">Suggestions</h2>
+
 		<div class="container">
-		<textarea class="CopyText" id="Text3" readonly>This suggestion has been considered before and rejected, because [BRIEF EXPLANATION]. Next time, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before you post here. [ADD A QUOTE FROM THE LIST EXPLAINING WHY THE SUGGESTION HAS BEEN REJECTED HERE]</textarea>
+		<textarea class="CopyText" id="Text3" readonly>Hey there! While it is nice you are trying to help, the Scratch Team is no longer looking for guides. Feel free to make this in a project instead!</textarea>
 		<button onclick="myFunction(3)">Copy Text</button>
 		<br>
 		<br>
 		</div>
-		
+		<br>
+
+		<h2 class="label" id="suggestions">Suggestions</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text4" readonly>You've posted a lot of suggestions in a single topic. Please put them in separate threads so that each suggestion can get the attention that it deserves.</textarea>
+		<textarea class="CopyText" id="Text4" readonly>This suggestion has been considered before and rejected for the following reason: [QUOTE FROM TOLORS]. Next time, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before you post here.</textarea>
 		<button onclick="myFunction(4)">Copy Text</button>
 		<br>
 		<br>
 		</div>
-		
 
 		<div class="container">
-		<textarea class="CopyText" id="Text5" readonly>Hi there! Try to keep suggestions on topic to the original post. Please make another topic for your suggestion.</textarea>
-		<button onclick="myFunction(5)">Copy Text</button>
+		<textarea class="CopyText" id="Text5" readonly>Hello! This topic is a duplicate of [url=ORIGINAL TOPIC URL]this one over here[/url]. That means that someone had the same suggestion as you! Don't worry though, as you can continue the discussion over there. In the future, I recommend you [url=https://scratch.mit.edu/discuss/topic/285904/]search for duplicates before posting[/url]. Thanks! :)</textarea>
+		<button onclick="myFunction(7)">Copy Text</button>
 		<br>
 		<br>
 		</div>
-		
+
+
 		<br>
-		
+
 		<h2 class="label" id="qas">Questions About Scratch</h2>
 		<div class="container">
 		<textarea class="CopyText" id="Text6" readonly>The Questions About Scratch forum is for users to ask questions and receive answers about Scratch. While it's nice that you want to help, posting random information isn't the best way to do it; it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
@@ -63,38 +62,45 @@
 		<br>
 		<br>
 		</div>
-		
-		
+
+
 		<div class="container">
 		<textarea class="CopyText" id="Text7" readonly>The bit of text that shows up at the end of all my posts is called a forum signature. You can use your signature to briefly describe yourself, advertise your projects, etc. By default, your signature is empty; if you want to change it, scroll to the bottom of the forum homepage and click "change your signature", or follow this link: [code]scratch.mit.edu/discuss/settings/YOUR USERNAME HERE[/code](replace YOUR USERNAME HERE with your username)</textarea>
 		<button onclick="myFunction(7)">Copy Text</button>
 		<br>
 		<br>
 		</div>
-		
+
 		<div class="container">
-		<textarea class="CopyText" id="Text8" readonly>Unfortunately, you can't change your username. The Scratch Team actually has changed a few usernames before, but only in very rare cases and only for special reasons, like if the username revealed personal information or was inappropriate; they won't change a username without a very good reason, and "I don't like my username" doesn't count as a very good reason in their eyes. In the past, they have considered making private username changes possible, but they decided against it, citing moderation concerns and the potential confusion a username change could cause in the community. For more information, read section 8.1 in the [url=https://scratch.mit.edu/discuss/topic/343602/]List of Rejected Suggestions[/url].<br><br>However, that doesn't mean you're out of options. You can choose to create a new account, transfer your current projects over by downloading/reuploading them, and make it clear that you're moving; keep in mind though that your statistics, like your follower count or the loves you've gotten on your projects, cannot be transferred over. Alternatively, if you don't want to lose those statistics, you can choose to stay with your current account and live with your username. Check out [url=https://scratch.mit.edu/discuss/topic/312761/]this helpful guide[/url] for more information.</textarea>
+		<textarea class="CopyText" id="Text8" readonly>Unfortunately, you can't change your username. The Scratch Team actually has changed a few usernames before, but only in very rare cases and only for special reasons, like if the username revealed personal information or was inappropriate; they won't change a username without a very good reason, and "I don't like my username" doesn't count as a very good reason in their eyes. In the past, they have considered making private username changes possible, but they decided against it, citing moderation concerns and the potential confusion a username change could cause in the community. For more information, read section 8.1 in the [url=https://scratch.mit.edu/discuss/topic/343602/]List of Rejected Suggestions[/url].However, that doesn't mean you're out of options. You can choose to create a new account, transfer your current projects over by downloading/reuploading them, and make it clear that you're moving; keep in mind though that your statistics, like your follower count or the loves you've gotten on your projects, cannot be transferred over. Alternatively, if you don't want to lose those statistics, you can choose to stay with your current account and live with your username. Check out [url=https://scratch.mit.edu/discuss/topic/312761/]this helpful guide[/url] for more information.</textarea>
 		<button onclick="myFunction(8)">Copy Text</button>
 		<br>
 		<br>
 		</div>
-			
-		<br>
-		
-		<h2 class="label" id="hws">Help With Scripts</h2>
+
 		<div class="container">
-		<textarea class="CopyText" id="Text9" readonly>The Help With Scripts forum is for users to ask questions and receive answers about their code. While it's nice that you want to help, posting random guides isn't the best way to do it - it clutters up the forum and potentially diverts attention from those who actually need help.</textarea>
+		<textarea class="CopyText" id="Text9" readonly>Unfortunately, there is no offical built-in search for the forums. However, there are some searches that users have made. You can find a list of them [url=https://scratch.mit.edu/discuss/topic/285904/]here[/url]. Alternatively, you can put the following in your search bar: [code]site:scratch.mit.edu/discuss/ KEWORDS HERE[/code] (replace KEWORDS HERE with your search term.)</textarea>
 		<button onclick="myFunction(9)">Copy Text</button>
 		<br>
 		<br>
 		</div>
-		
+
 		<br>
-		
+
+		<h2 class="label" id="hws">Help With Scripts</h2>
+		<div class="container">
+		<textarea class="CopyText" id="Text10" readonly>The Help With Scripts forum is for users to ask questions and receive answers about their code. While it's nice that you want to help, posting random guides isn't the best way to do it as it clutters up the forum and diverts attention from those who actually need help.</textarea>
+		<button onclick="myFunction(10)">Copy Text</button>
+		<br>
+		<br>
+		</div>
+
+		<br>
+
 		<h2 class="label" id="bag">Bugs And Glitches</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text10" readonly>What browser and OS are you using? You can find out this information by pressing the grey globe icon when you create a post.</textarea>
-		<button onclick="myFunction(10)">Copy Text</button>
+		<textarea class="CopyText" id="Text11" readonly>What browser and OS are you using? You can find out this information by pressing the grey globe icon when you create a post.</textarea>
+		<button onclick="myFunction(11)">Copy Text</button>
 		<br>
 		<br>
 		</div>
