Small wording change

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 
 		<div class="container">
-		<textarea class="CopyText" id="Text3" readonly>Hey there! While it is nice you are trying to help, the Scratch Team is no longer looking for guides. Feel free to make this in a project instead!</textarea>
+		<textarea class="CopyText" id="Text3" readonly>Hey there! While it is nice you are trying to help, the Scratch Team is not looking for guides at this time. Feel free to make this in a project instead!</textarea>
 		<button onclick="myFunction(3)">Copy Text</button>
 		<br>
 		<br>
