Change Rejected Suggestion Message

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<h2 class="label" id="suggestions">Suggestions</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text4" readonly>This suggestion has been considered before and rejected for the following reason: [QUOTE FROM TOLORS]. Next time, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before you post here.</textarea>
+		<textarea class="CopyText" id="Text4" readonly>This suggestion has been considered before and rejected for the following reason: [quote=The Offical List of Rejected Suggestions]INSERT QUOTE FROM TOLORS HERE[/quote]. Next time, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before you post here.</textarea>
 		<button onclick="myFunction(4)">Copy Text</button>
 		<br>
 		<br>
