--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</div>
 
 		<p class="label">Click on the button to copy the text from the text field.</p>
+		<a href="javascript:var s=document.createElement('script'); s.src='https://functionalmetatable.github.io/QuickReply/bookmarklet.js'; document.body.appendChild(s) void(0);">Or use this bookmarklet (drag me into your bookmarks bar)</a>
 		<h2 class="label" id="general">General</h2>
 
 		<div class="container">
