--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>QuickReply</title>
-		<link rel="shortcut icon" type="image/png" href="/favicon.png">
+		<link rel="shortcut icon" type="image/png" href="favicon.png">
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	</head>
 
