Add header and footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body style= "margin:0">
-		<embed type="text/html" src="https://theforumhelpers.github.io/resources/header.html" style="width:100%; height:70px; margin-bottom:-5px">
+		<header id="header></header>
 
 		<div class="TOC">
 		<h3 style="text-align: center;"><a href="#top" class="PageLink">Top</a></h3>
@@ -104,6 +104,11 @@
 		<br>
 		<br>
 		</div>
+		
+		<footer id="footer"></footer>
+		
+		<script src="../resources/imports.js" onload='reference("../")'></script>
+									       
 		<script>
 			function myFunction(area) {
   				var copyText = document.getElementById("Text"+area);
