Add quotation mark

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body style= "margin:0">
-		<header id="header></header>
+		<header id="header"></header>
 
 		<div class="TOC">
 		<h3 style="text-align: center;"><a href="#top" class="PageLink">Top</a></h3>
