--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>QuickReply</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png">
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<link rel="stylesheet" type="text/css" href="../resources/stylesheet.css">
 	</head>
 
 	<body style= "margin:0">
