--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		<h2 class="label" id="suggestions">Suggestions</h2>
 		<div class="container">
-		<textarea class="CopyText" id="Text4" readonly>This suggestion has been considered before and rejected for the following reason: [quote=The Offical List of Rejected Suggestions]INSERT QUOTE FROM TOLORS HERE[/quote]. Next time, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before you post here.</textarea>
+		<textarea class="CopyText" id="Text4" readonly>This suggestion has been considered before and rejected for the following reason: [quote=The Official List of Rejected Suggestions]INSERT QUOTE FROM TOLORS HERE[/quote]. Next time, please check out the list of [url=https://scratch.mit.edu/discuss/topic/343602/]Rejected Suggestions[/url] before you post here.</textarea>
 		<button onclick="myFunction(4)">Copy Text</button>
 		<br>
 		<br>
@@ -80,7 +80,7 @@
 		</div>
 
 		<div class="container">
-		<textarea class="CopyText" id="Text9" readonly>Unfortunately, there is no offical built-in search for the forums. However, there are some searches that users have made. You can find a list of them [url=https://scratch.mit.edu/discuss/topic/285904/]here[/url]. Alternatively, you can put the following in your search bar: [code]site:scratch.mit.edu/discuss/ KEWORDS HERE[/code] (replace KEWORDS HERE with your search term.)</textarea>
+		<textarea class="CopyText" id="Text9" readonly>Unfortunately, there is no official built-in search for the forums. However, there are some searches that users have made. You can find a list of them [url=https://scratch.mit.edu/discuss/topic/285904/]here[/url]. Alternatively, you can put the following in your search bar: [code]site:scratch.mit.edu/discuss/ KEYWORDS HERE[/code] (replace KEYWORDS HERE with your search term.)</textarea>
 		<button onclick="myFunction(9)">Copy Text</button>
 		<br>
 		<br>
