--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 		<link rel="shortcut icon" type="image/png" href="favicon.png">
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<link rel="stylesheet" type="text/css" href="../resources/stylesheet.css">
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-FGN5P806VX"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-FGN5P806VX');
+		</script>
 	</head>
 
 	<body style= "margin:0">
@@ -105,6 +115,8 @@
 		<br>
 		<br>
 		</div>
+		
+		<div class="privacyWarning" id="privacyWarning"></div>
 		
 		<footer id="footer"></footer>
 		
