Update the "search for duplicates" link in the QuickReply for duplicates
I think that searching for duplicates on [Ocular](ocular.jeffalo.net) is more comfortable than searching for similar topic in that [loooong list](https://scratch.mit.edu/discuss/topic/285904/) of suggestions...

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</div>
 
 		<div class="container">
-		<textarea class="CopyText" id="Text5" readonly>Hello! This topic is a duplicate of [url=ORIGINAL TOPIC URL]this one over here[/url]. That means that someone had the same suggestion as you! Don't worry though, as you can continue the discussion over there. In the future, I recommend you [url=https://scratch.mit.edu/discuss/topic/285904/]search for duplicates before posting[/url]. Thanks! :)</textarea>
+		<textarea class="CopyText" id="Text5" readonly>Hello! This topic is a duplicate of [url=ORIGINAL TOPIC URL]this one over here[/url]. That means that someone had the same suggestion as you! Don't worry though, as you can continue the discussion over there. In the future, I recommend you [url=https://ocular.jeffalo.net/search/?utm_campaign=anti-dupe%20search%20link%20by%20The%20Forum%20Helpers]search for duplicates before posting[/url]. Thanks! :)</textarea>
 		<button onclick="myFunction(7)">Copy Text</button>
 		<br>
 		<br>
