Hotfix background colour

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</script>
 	</head>
 
-	<body style= "margin:0">
+	<body style= "margin:0" class="lightMode">
 		<header id="header"></header>
 
 		<div class="TOC">
