Make button not display
Make the change theme button not display

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				});
 			}
       //remove this bit when change theme is added
-      document.getElementById('changeTheme').setAttribute('title', 'working on it!');
+      document.getElementById('changeTheme').style.display = "none";
       //stop removing!
 		</script>
 	</body>
