--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="lightMode">
+<html lang="en" class="lightMode">
 
 <head>
-  <!--<base href="https://theforumhelpers.github.io">used for tesing.. nothing to see here-->
+  <base href="https://theforumhelpers.github.io/QuickReply">
 	<meta charset="UTF-8">
 	<title>QuickReply</title>
-	<link rel="shortcut icon" type="image/png" href="favicon.png">
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="shortcut icon" type="image/png" href="../resources/favicon.png">
+	<link rel="stylesheet" type="text/css" href="https://QuickReply.stevesgreatness.repl.co/stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="../resources/stylesheet.css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FGN5P806VX">
@@ -22,7 +22,6 @@
 
 <body style="margin:0;">
 	<header id="header"></header>
-
 	<div class="TOC">
 		<h3 style="text-align: center;"><a href="#top" class="PageLink">Top</a></h3>
 		<h3 style="text-align: center;"><a href="#general" class="PageLink">General</a></h3>
@@ -118,23 +117,26 @@
 		<br>
 		</div>
 		
-		<div class="privacyWarning" id="privacyWarning"></div>
-		
+		<div class="privacyWarning" id="privacyWarning"></div>		
 		<footer id="footer"></footer>
 		
 		<script src="../resources/imports.js" onload='reference("../")'></script>
+		<script src="../resources/theme.js"></script>
 		<script>
 			function myFunction(area) {
   				var copyText = document.getElementById("Text"+area);
  				copyText.select();
   				document.execCommand("copy");
-				gtag('event', 'QuickReplyCopied', {
+				/*gtag('event', 'QuickReplyCopied', {
 					'Area': area
-				});
+				});*/
 			}
-      //remove this bit when change theme is added
-      document.getElementById('changeTheme').style.display = "none";
-      //stop removing!
+      //this and the next line when theme's are added
+      //document.getElementById('changeTheme').style.display = "none";
+			alert(`themes in this part of the Forum Helpers website aren't currently finished.`)
+			alert(`If you's like to suggest a change to the themes, please give it on 1 of the 2 links:`)
+			alert(`https://github.com/theforumhelpers/QuickReply/issues/38
+			https://replit.com/@StevesGreatness/QuickReply`)
 		</script>
 	</body>
 </html>
