Made some finishing changes
Removed the lines to remove the the theme change button.
Added a dot for the stylesheet.css so that it shows the one from the QR repo.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>QuickReply</title>
 	<link rel="shortcut icon" type="image/png" href="../resources/favicon.png">
-	<link rel="stylesheet" type="text/css" href="/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="./stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="../resources/stylesheet.css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FGN5P806VX">
@@ -130,8 +130,6 @@
 					'Area': area
 				});
 			}
-      //This line of code is a left over.
-      //document.getElementById('changeTheme').style.display = "none";
 		</script>
 	</body>
 </html>
